# Jarvis-AI

./: .gitignore  .gitmodules  Dockerfile  README.md  communication_log.txt  demo.py  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  temporary.py  test.py  test_network.py
UI/: index.html
a2a-tutorial/my-project/: pyproject.toml
a2a-tutorial/my-project/src/my_project/: __init__.py  task_manager.py
backend/: GOOGLE_SERVICES_SETUP.md  PRODUCTION_DEPLOYMENT.md  app.py  database.py  gunicorn.conf.py  main copy.py  main.py  requirements.txt  test_commands.py  user_agent_manager.py
backend/A2A/a2a/: pyproject.toml
backend/A2A/a2a/src/a2a/: __init__.py  task_manager.py
config/: agents.py
extracted_data/: cv_summary_ole_heuchert_20250405_160822.txt  cv_summary_ole_heuchert_20250414_152256.txt  cv_summary_ole_heuchert_20250414_152304.txt  cv_summary_ole_heuchert_20250414_161337.txt
logs/: log_2025-04-17_17-16-55.txt  log_2025-04-17_17-33-59.txt  log_2025-04-24_13-26-34.txt  log_2025-04-24_13-29-31.txt  log_2025-04-24_13-30-07.txt  log_2025-04-24_13-30-47.txt  log_2025-04-24_17-54-32.txt  log_2025-04-24_17-55-43.txt  log_2025-04-24_17-57-50.txt  log_2025-04-24_17-58-06.txt  log_2025-04-24_17-58-24.txt  log_2025-04-24_17-58-34.txt  log_2025-04-24_17-59-45.txt  log_2025-04-24_18-02-06.txt  log_2025-04-24_18-03-45.txt  log_2025-04-24_18-06-29.txt  log_2025-04-24_18-06-48.txt  log_2025-04-24_18-19-19.txt  log_2025-04-24_18-19-59.txt  log_2025-04-26_13-09-52.txt  log_2025-04-26_13-13-48.txt  log_2025-04-26_13-32-07.txt  log_2025-04-26_13-41-37.txt  log_2025-04-26_17-57-29.txt  log_2025-04-26_18-00-16.txt  log_2025-04-26_18-05-06.txt  log_2025-04-26_18-06-59.txt  (+15 more)
(+56 files in other folders)
