[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oliomap", email = "oliver.calvet@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a2a-samples",
    "python-a2a>=0.5.3",
]

[project.scripts]
my-project = "my_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a2a-samples = { git = "https://github.com/google/A2A", subdirectory = "samples/python" }

[tool.uv.workspace]
members = [
    "my-project",
]
